Bug 1306247 - Remove initialization of a null buffer. r=jesup a=gchang