media/libcubeb/update.sh
@@ -69,3 +69,5 @@ echo "Applying another patch on top of $version"
 patch -p3 < ./bug1314496_allocator.patch
 echo "Applying another patch on top of $version"
 patch -p1 < ./bug1315495_wasapi_leak.patch
+echo "Applying another patch on top of $version"
+patch -p1 < ./bug1306247_crash_fix.patch
